--- a/Central Bank/Base.lproj/Main.storyboard
+++ b/Central Bank/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8Ik-HF-SMs">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
@@ -18,6 +19,9 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UuD-2u-B9q" id="E01-c4-V4N">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Vec-xe-eAS" kind="show" identifier="DetailViewControllerSegue" id="xpE-QV-EdN"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -30,6 +34,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPQ-Xw-Xe2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1445" y="447"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="ZJc-1l-3cf">
+            <objects>
+                <viewController id="Vec-xe-eAS" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HYQ-sa-4FQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="1DZ-2G-Xs0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8dp-pg-FeF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2dQ-Br-T4z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2165" y="447"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3mr-hw-qJC">
