--- a/Central Bank/Base.lproj/Main.storyboard
+++ b/Central Bank/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Currency-->
+        <!--Table View Controller-->
         <scene sceneID="M9I-pT-1Ou">
             <objects>
                 <tableViewController id="Zou-kw-Kea" customClass="TableViewController" sceneMemberID="viewController">
@@ -68,7 +68,7 @@
                             <outlet property="delegate" destination="Zou-kw-Kea" id="4N9-v7-Z23"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Currency" id="ITC-Q9-dc1"/>
+                    <navigationItem key="navigationItem" id="ITC-Q9-dc1"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPQ-Xw-Xe2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
